MINI-0/Mini0Parser.py
# Generated from Mini0.g4 by ANTLR 4.9.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class Mini0Parser ( Parser ):

    grammarFileName = "Mini0.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'fun'", "<INVALID>", "<INVALID>", 
                     "'('", "')'", "':'", "','", "'end'", "'['", "']'", 
                     "'int'", "'bool'", "'char'", "'string'", "'if'", "'else'", 
                     "'while'", "'loop'", "'='", "'return'", "'true'", "'false'", 
                     "'new'", "'+'", "'-'", "'*'", "'/'", "'>'", "'<'", 
                     "'>='", "'<='", "'<>'", "'and'", "'or'", "'not'" ]

    symbolicNames = [ "<INVALID>", "NL", "FUNCTION", "LITNUMERAL", "LITSTRING", 
                      "PARENIZQ", "PARENDER", "DOSPUNTOS", "COMA", "END", 
                      "LLAVIZQ", "LLAVDER", "INT", "BOOL", "CHAR", "STRING", 
                      "IF", "ELSE", "WHILE", "LOOP", "IGUAL", "RETURN", 
                      "TRUE", "FALSE", "NEW", "SUMA", "RESTA", "MULTI", 
                      "DIV", "MAYOR", "MENOR", "MAYORIGUAL", "MENORIGUAL", 
                      "DIFER", "AND", "OR", "NOT", "ID", "COMENTARIOS", 
                      "COMENTARIO", "WS" ]

    RULE_programa = 0
    RULE_decl = 1
    RULE_nl = 2
    RULE_globall = 3
    RULE_funcion = 4
    RULE_bloques = 5
    RULE_bloque = 6
    RULE_params = 7
    RULE_parametro = 8
    RULE_tipobase = 9
    RULE_tipo = 10
    RULE_var = 11
    RULE_declvar = 12
    RULE_comandos = 13
    RULE_comando = 14
    RULE_cmdif = 15
    RULE_cmdwhile = 16
    RULE_cmdasign = 17
    RULE_llamada = 18
    RULE_listaexp = 19
    RULE_cmdreturn = 20
    RULE_exp = 21

    ruleNames =  [ "programa", "decl", "nl", "globall", "funcion", "bloques", 
                   "bloque", "params", "parametro", "tipobase", "tipo", 
                   "var", "declvar", "comandos", "comando", "cmdif", "cmdwhile", 
                   "cmdasign", "llamada", "listaexp", "cmdreturn", "exp" ]

    EOF = Token.EOF
    NL=1
    FUNCTION=2
    LITNUMERAL=3
    LITSTRING=4
    PARENIZQ=5
    PARENDER=6
    DOSPUNTOS=7
    COMA=8
    END=9
    LLAVIZQ=10
    LLAVDER=11
    INT=12
    BOOL=13
    CHAR=14
    STRING=15
    IF=16
    ELSE=17
    WHILE=18
    LOOP=19
    IGUAL=20
    RETURN=21
    TRUE=22
    FALSE=23
    NEW=24
    SUMA=25
    RESTA=26
    MULTI=27
    DIV=28
    MAYOR=29
    MENOR=30
    MAYORIGUAL=31
    MENORIGUAL=32
    DIFER=33
    AND=34
    OR=35
    NOT=36
    ID=37
    COMENTARIOS=38
    COMENTARIO=39
    WS=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mini0Parser.DeclContext)
            else:
                return self.getTypedRuleContext(Mini0Parser.DeclContext,i)


        def EOF(self):
            return self.getToken(Mini0Parser.EOF, 0)

        def NL(self, i:int=None):
            if i is None:
                return self.getTokens(Mini0Parser.NL)
            else:
                return self.getToken(Mini0Parser.NL, i)

        def getRuleIndex(self):
            return Mini0Parser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = Mini0Parser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Mini0Parser.NL:
                self.state = 44
                self.match(Mini0Parser.NL)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 50
            self.decl()
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Mini0Parser.FUNCTION or _la==Mini0Parser.ID:
                self.state = 51
                self.decl()
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self.match(Mini0Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcion(self):
            return self.getTypedRuleContext(Mini0Parser.FuncionContext,0)


        def globall(self):
            return self.getTypedRuleContext(Mini0Parser.GloballContext,0)


        def getRuleIndex(self):
            return Mini0Parser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecl" ):
                return visitor.visitDecl(self)
            else:
                return visitor.visitChildren(self)




    def decl(self):

        localctx = Mini0Parser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decl)
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Mini0Parser.FUNCTION]:
                self.enterOuterAlt(localctx, 1)
                self.state = 59
                self.funcion()
                pass
            elif token in [Mini0Parser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.globall()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self):
            return self.getToken(Mini0Parser.NL, 0)

        def getRuleIndex(self):
            return Mini0Parser.RULE_nl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNl" ):
                listener.enterNl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNl" ):
                listener.exitNl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNl" ):
                return visitor.visitNl(self)
            else:
                return visitor.visitChildren(self)




    def nl(self):

        localctx = Mini0Parser.NlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_nl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(Mini0Parser.NL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GloballContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declvar(self):
            return self.getTypedRuleContext(Mini0Parser.DeclvarContext,0)


        def nl(self):
            return self.getTypedRuleContext(Mini0Parser.NlContext,0)


        def getRuleIndex(self):
            return Mini0Parser.RULE_globall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGloball" ):
                listener.enterGloball(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGloball" ):
                listener.exitGloball(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGloball" ):
                return visitor.visitGloball(self)
            else:
                return visitor.visitChildren(self)




    def globall(self):

        localctx = Mini0Parser.GloballContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_globall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.declvar()
            self.state = 66
            self.nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(Mini0Parser.FUNCTION, 0)

        def ID(self):
            return self.getToken(Mini0Parser.ID, 0)

        def PARENIZQ(self):
            return self.getToken(Mini0Parser.PARENIZQ, 0)

        def params(self):
            return self.getTypedRuleContext(Mini0Parser.ParamsContext,0)


        def PARENDER(self):
            return self.getToken(Mini0Parser.PARENDER, 0)

        def nl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mini0Parser.NlContext)
            else:
                return self.getTypedRuleContext(Mini0Parser.NlContext,i)


        def bloques(self):
            return self.getTypedRuleContext(Mini0Parser.BloquesContext,0)


        def END(self):
            return self.getToken(Mini0Parser.END, 0)

        def DOSPUNTOS(self):
            return self.getToken(Mini0Parser.DOSPUNTOS, 0)

        def tipo(self):
            return self.getTypedRuleContext(Mini0Parser.TipoContext,0)


        def getRuleIndex(self):
            return Mini0Parser.RULE_funcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncion" ):
                listener.enterFuncion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncion" ):
                listener.exitFuncion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncion" ):
                return visitor.visitFuncion(self)
            else:
                return visitor.visitChildren(self)




    def funcion(self):

        localctx = Mini0Parser.FuncionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcion)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(Mini0Parser.FUNCTION)
            self.state = 69
            self.match(Mini0Parser.ID)
            self.state = 70
            self.match(Mini0Parser.PARENIZQ)
            self.state = 71
            self.params()
            self.state = 72
            self.match(Mini0Parser.PARENDER)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Mini0Parser.DOSPUNTOS:
                self.state = 73
                self.match(Mini0Parser.DOSPUNTOS)
                self.state = 74
                self.tipo()


            self.state = 77
            self.nl()
            self.state = 78
            self.bloques()
            self.state = 79
            self.match(Mini0Parser.END)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Mini0Parser.NL:
                self.state = 80
                self.nl()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloquesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def bloque(self):
            return self.getTypedRuleContext(Mini0Parser.BloqueContext,0)


        def bloques(self):
            return self.getTypedRuleContext(Mini0Parser.BloquesContext,0)


        def getRuleIndex(self):
            return Mini0Parser.RULE_bloques

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloques" ):
                listener.enterBloques(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloques" ):
                listener.exitBloques(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloques" ):
                return visitor.visitBloques(self)
            else:
                return visitor.visitChildren(self)




    def bloques(self):

        localctx = Mini0Parser.BloquesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_bloques)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.bloque()
                self.state = 87
                self.bloques()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 89
                self.bloque()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BloqueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def nl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mini0Parser.NlContext)
            else:
                return self.getTypedRuleContext(Mini0Parser.NlContext,i)


        def declvar(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mini0Parser.DeclvarContext)
            else:
                return self.getTypedRuleContext(Mini0Parser.DeclvarContext,i)


        def comandos(self):
            return self.getTypedRuleContext(Mini0Parser.ComandosContext,0)


        def getRuleIndex(self):
            return Mini0Parser.RULE_bloque

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloque" ):
                listener.enterBloque(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloque" ):
                listener.exitBloque(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBloque" ):
                return visitor.visitBloque(self)
            else:
                return visitor.visitChildren(self)




    def bloque(self):

        localctx = Mini0Parser.BloqueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_bloque)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 92
                    self.declvar()
                    self.state = 93
                    self.nl() 
                self.state = 99
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Mini0Parser.IF) | (1 << Mini0Parser.WHILE) | (1 << Mini0Parser.RETURN) | (1 << Mini0Parser.ID))) != 0):
                self.state = 100
                self.comandos()


            self.state = 103
            self.nl()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parametro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Mini0Parser.ParametroContext)
            else:
                return self.getTypedRuleContext(Mini0Parser.ParametroContext,i)


        def COMA(self, i:int=None):
            if i is None:
                return self.getTokens(Mini0Parser.COMA)
            else:
                return self.getToken(Mini0Parser.COMA, i)

        def getRuleIndex(self):
            return Mini0Parser.RULE_params

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParams" ):
                listener.enterParams(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParams" ):
                listener.exitParams(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = Mini0Parser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.state = 114
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Mini0Parser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.parametro()
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Mini0Parser.COMA:
                    self.state = 106
                    self.match(Mini0Parser.COMA)
                    self.state = 107
                    self.parametro()
                    self.state = 112
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [Mini0Parser.PARENDER]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametroContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(Mini0Parser.ID, 0)

        def DOSPUNTOS(self):
            return self.getToken(Mini0Parser.DOSPUNTOS, 0)

        def tipo(self):
            return self.getTypedRuleContext(Mini0Parser.TipoContext,0)


        def getRuleIndex(self):
            return Mini0Parser.RULE_parametro

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParametro" ):
                listener.enterParametro(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParametro" ):
                listener.exitParametro(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParametro" ):
                return visitor.visitParametro(self)
            else:
                return visitor.visitChildren(self)




    def parametro(self):

        localctx = Mini0Parser.ParametroContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parametro)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(Mini0Parser.ID)
            self.state = 117
            self.match(Mini0Parser.DOSPUNTOS)
            self.state = 118
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipobaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(Mini0Parser.INT, 0)

        def BOOL(self):
            return self.getToken(Mini0Parser.BOOL, 0)

        def CHAR(self):
            return self.getToken(Mini0Parser.CHAR, 0)

        def STRING(self):
            return self.getToken(Mini0Parser.STRING, 0)

        def getRuleIndex(self):
            return Mini0Parser.RULE_tipobase

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipobase" ):
                listener.enterTipobase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipobase" ):
                listener.exitTipobase(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipobase" ):
                return visitor.visitTipobase(self)
            else:
                return visitor.visitChildren(self)




    def tipobase(self):

        localctx = Mini0Parser.TipobaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_tipobase)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Mini0Parser.INT) | (1 << Mini0Parser.BOOL) | (1 << Mini0Parser.CHAR) | (1 << Mini0Parser.STRING))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TipoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tipobase(self):
            return self.getTypedRuleContext(Mini0Parser.TipobaseContext,0)


        def LLAVIZQ(self):
            return self.getToken(Mini0Parser.LLAVIZQ, 0)

        def LLAVDER(self):
            return self.getToken(Mini0Parser.LLAVDER, 0)

        def tipo(self):
            return self.getTypedRuleContext(Mini0Parser.TipoContext,0)


        def getRuleIndex(self):
            return Mini0Parser.RULE_tipo

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTipo" ):
                listener.enterTipo(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTipo" ):
                listener.exitTipo(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTipo" ):
                return visitor.visitTipo(self)
            else:
                return visitor.visitChildren(self)




    def tipo(self):

        localctx = Mini0Parser.TipoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_tipo)
        try:
            self.state = 126
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [Mini0Parser.INT, Mini0Parser.BOOL, Mini0Parser.CHAR, Mini0Parser.STRING]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.tipobase()
                pass
            elif token in [Mini0Parser.LLAVIZQ]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.match(Mini0Parser.LLAVIZQ)
                self.state = 124
                self.match(Mini0Parser.LLAVDER)
                self.state = 125
                self.tipo()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(Mini0Parser.ID, 0)

        def var(self):
            return self.getTypedRuleContext(Mini0Parser.VarContext,0)


        def LLAVIZQ(self):
            return self.getToken(Mini0Parser.LLAVIZQ, 0)

        def exp(self):
            return self.getTypedRuleContext(Mini0Parser.ExpContext,0)


        def LLAVDER(self):
            return self.getToken(Mini0Parser.LLAVDER, 0)

        def getRuleIndex(self):
            return Mini0Parser.RULE_var

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar" ):
                listener.enterVar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar" ):
                listener.exitVar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVar" ):
                return visitor.visitVar(self)
            else:
                return visitor.visitChildren(self)



    def var(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = Mini0Parser.VarContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 22
        self.enterRecursionRule(localctx, 22, self.RULE_var, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(Mini0Parser.ID)
            self._ctx.stop = self._input.LT(-1)
            self.state = 138
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = Mini0Parser.VarContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_var)
                    self.state = 131
                    if not self.precpred(self._ctx, 1):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 1)")
                    self.state = 132
                    self.match(Mini0Parser.LLAVIZQ)
                    self.state = 133
                    self.exp(0)
                    self.state = 134
                    self.match(Mini0Parser.LLAVDER) 
                self.state = 140
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class DeclvarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(Mini0Parser.ID, 0)

        def DOSPUNTOS(self):
            return self.getToken(Mini0Parser.DOSPUNTOS, 0)

        def tipo(self):
            return self.getTypedRuleContext(Mini0Parser.TipoContext,0)


        def getRuleIndex(self):
            return Mini0Parser.RULE_declvar

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclvar" ):
                listener.enterDeclvar(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclvar" ):
                listener.exitDeclvar(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclvar" ):
                return visitor.visitDeclvar(self)
            else:
                return visitor.visitChildren(self)




    def declvar(self):

        localctx = Mini0Parser.DeclvarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_declvar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(Mini0Parser.ID)
            self.state = 142
            self.match(Mini0Parser.DOSPUNTOS)
            self.state = 143
            self.tipo()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandosContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def comando(self):
            return self.getTypedRuleContext(Mini0Parser.ComandoContext,0)


        def nl(self):
            return self.getTypedRuleContext(Mini0Parser.NlContext,0)


        def comandos(self):
            return self.getTypedRuleContext(Mini0Parser.ComandosContext,0)


        def getRuleIndex(self):
            return Mini0Parser.RULE_comandos

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComandos" ):
                listener.enterComandos(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComandos" ):
                listener.exitComandos(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComandos" ):
                return visitor.visitComandos(self)
            else:
                return visitor.visitChildren(self)




    def comandos(self):

        localctx = Mini0Parser.ComandosContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_comandos)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.comando()
                self.state = 146
                self.nl()
                self.state = 147
                self.comandos()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.comando()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
